# pico-vga-6bit-demo

./: CMakeLists.txt  README.md  main.c  vga_6bit.c  vga_6bit.h  vga_draw.c  vga_draw.h  vga_font.c  vga_font.h
data/: background.h  font6x8.h  loserboy.h  tiles.h
photos/: video.webm
